[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://images/Fundo.svg" type="Texture" id=2]
[ext_resource path="res://scenes/Tabuleiro.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Alvo.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Jogador.gd" type="Script" id=5]
[ext_resource path="res://images/HeroiAtras1.png" type="Texture" id=6]
[ext_resource path="res://images/HeroiAtras2.png" type="Texture" id=7]
[ext_resource path="res://images/HeroiAtras3.png" type="Texture" id=8]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=10]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scripts/Equacoes.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "tras",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.8543, 21.1758 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Tabuleiro" parent="." instance=ExtResource( 3 )]

[node name="Alvo" parent="." instance=ExtResource( 4 )]
editor/display_folded = true

[node name="AnimatedSprite" parent="Alvo" index="1"]
frame = 5

[node name="Jogador" type="Area2D" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Frames" type="AnimatedSprite" parent="Jogador"]
frames = SubResource( 1 )
animation = "tras"

[node name="Colisao" type="CollisionShape2D" parent="Jogador"]
position = Vector2( 3, 2 )
shape = SubResource( 2 )

[node name="PosicaoInicial" type="Position2D" parent="Jogador"]

[node name="Tempo" type="Timer" parent="."]

[node name="QuadroNegro" type="ColorRect" parent="."]
margin_left = 28.0
margin_top = 1280.0
margin_right = 1052.0
margin_bottom = 1792.0
rect_min_size = Vector2( 512, 512 )
color = Color( 0.0588235, 0.329412, 0.121569, 1 )

[node name="HUD" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
script = ExtResource( 10 )

[node name="Score" parent="HUD" index="0"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1065.28
margin_top = 58.5416
margin_right = -696.278
margin_bottom = 136.542
text = "Score: 000"

[node name="Mensagem" parent="HUD" index="1"]
margin_top = 420.0
margin_bottom = 738.0
custom_colors/font_color_shadow = Color( 1, 0.352941, 0, 1 )
text = "Choose a house whose result of the equation makes it collide with the target."
uppercase = true

[node name="StartButton" parent="HUD" index="2"]
margin_left = -74.4159
margin_top = -124.832
margin_right = 105.584
margin_bottom = -40.8318

[node name="Tentativas" type="Label" parent="HUD"]
margin_left = 19.9445
margin_top = 15.5124
margin_right = 314.945
margin_bottom = 73.5124
custom_fonts/font = SubResource( 3 )
text = "Attempts: 5"

[node name="Tempo" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.435
margin_top = 27.8788
margin_right = 183.565
margin_bottom = 105.879
custom_fonts/font = SubResource( 4 )
text = "Time: 10"

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="Equacao" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 12 )
[connection signal="timeout" from="Tempo" to="." method="_on_Tempo_timeout"]
[connection signal="gamer_over" from="HUD" to="." method="_on_HUD_gamer_over"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]

[editable path="Tabuleiro"]

[editable path="Alvo"]

[editable path="HUD"]
